[package]
name = "sumtree"
authors = ["Yannick Molinghen <yannick.molinghen@ulb.be>"]
version = "0.2.2"
edition = "2021"
repository = "https://github.com/yamoling/sumtree"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
rand = "0.8"

[dev-dependencies]
rand= "*"

[lib]
crate-type = ["cdylib"]
name = "sumtree"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]