[package]
name = "sumtree"
version = "0.2.9"
edition = "2024"
repository = "https://github.com/yamoling/sumtree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "sumtree"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.28.0", features = ["generate-import-lib"] }
pyo3-stub-gen = "0.20.0"
rand = "0.10"
