[project]
name = "sumtree"
description = "Fast and simple SumTree implementation in Rust with Python bindings"
readme = "readme_pypi.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[[project.authors]]
name = "Yannick Molinghen"
email = "yannick.molinghen@ulb.be"

[dependency-groups]
dev = [
  "maturin>=1.12.6",
  "pytest>=7.4.4",
  "toml>=0.10.2",
]

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "sumtree"
profile = "release"
python-source = "python"
# version = { path = "python/sumtree/__init__.py", "attr" = "__version__" }

[tool.pytest]
pythonpath = ["python"]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
